<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:textSize="16sp" />
        <RadioGroup
            android:id="@+id/rg_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_one"
                style="@style/SubRadioButton"
                android:text="科目一"
                android:checked="true"
                android:layout_marginLeft="4dp"/>
            <RadioButton
                android:id="@+id/rb_two"
                style="@style/SubRadioButton"
                android:text="科目二" />
            <RadioButton
                android:id="@+id/rb_three"
                style="@style/SubRadioButton"
                android:text="科目三" />
            <RadioButton
                android:id="@+id/rb_four"
                style="@style/SubRadioButton"
                android:text="科目四" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp" />
        <Button
            android:id="@+id/tv_select_date"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/date_select_tip"
            android:padding="3dp"
            android:background="@drawable/select_tv_sub"
            android:textColor="@drawable/text_dark_light_press"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:id="@+id/ll_select_site">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:textSize="16sp"
            />
        <Button
            android:id="@+id/tv_select_site"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/site_select_tip"
            android:textSize="16sp"
            android:padding="3dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:background="@drawable/select_tv_sub"
            android:textColor="@drawable/text_dark_light_press"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:id="@+id/ll_shuttle">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shuttle"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/cb_shuttle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
    </LinearLayout>
</LinearLayout>
